# graph_os

./: .credo.exs  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEBUG_MCP.md  README.md  REFACTORING.md  TASKS.md  disabled_mix.exs  extract_apps.sh  mix.exs  mix_standalone.exs
.backup/graph_os_dev/: README.md  mix.exs
.backup/scripts/: dev.sh
.backup/vscode-graphos/: package.json  tsconfig.json
.devcontainer/: .gitignore  Dockerfile  README.md  check-vpn.sh  claude-auth.sh  devcontainer.json  env-setup.sh  initialize.sh  setup-container.sh  start-mcp.sh
apps/graph_os_cli/: .gitignore  Cargo.toml  README.md  TASKS.md  build.rs
apps/graph_os_cli/src/: chat.rs  cli.rs  config.rs  lib.rs  main.rs
apps/graph_os_cli/src/adapters/: grpc.rs  mod.rs
apps/graph_os_cli/tests/: cli_tests.rs
apps/graph_os_core/: .gitignore  README.md  mix.exs
config/: .credo.exs  config.exs  dev.exs  prod.exs  runtime.exs  test.exs
context/: MCP_MACRO_ISSUE.md
graph_os_core/: README.md  mix.exs
graph_os_protocol/: .gitignore  README.md  mix.exs
graph_os_store/: .windsurfrules  PLAN.md  README.md  TASKS.md  mix.exs
instructions/: ARCHITECTURE.md  BOUNDARIES.md  CLAUDE.md  GRAPH_ACTIONS.md  HANDOFFS.md  README.md  REFACTORING.md  TASKS.md  index.md
mcp_client_test/: .gitignore  package-lock.json  package.json  test_connection.ts  tsconfig.json
scripts/: README.md  devcontainer.sh  install-lexical.sh  mcp.sh
tmux/: CLAUDE.md  mix.exs
vscode-graphos/: .gitignore  LICENSE  README.md  package-lock.json  vscode-graphos-0.1.0.vsix  webpack.config.js
(+471 files in other folders)
