[package]
name = "graph_os_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gos"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
ratatui = "0.30.0-alpha.2"
crossterm = "0.28"
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5.0.1"
tokio-util = "0.7.10"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
once_cell = "1.19.0"

# HTTP and JSON-RPC client
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dotenv = "0.15.0"

# Comment out unused dependency for now
# openai = "1.0.0"
